# kagent

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  sango.yaml
.aidlc/: workspace.yaml
.codex/: AGENTS.md  config.toml  hooks.json
.codex/rules/: careflow.rules
crates/kagent-agent/: Cargo.toml
crates/kagent-agent/src/: lib.rs
crates/kagent-cli/: Cargo.toml
crates/kagent-cli/src/: main.rs
crates/kagent-core/: Cargo.toml
crates/kagent-core/src/: lib.rs
crates/kagent-git/: Cargo.toml
crates/kagent-git/src/: lib.rs
crates/kagent-kitty/: Cargo.toml
crates/kagent-kitty/src/: lib.rs
crates/kagent-lens/: Cargo.toml
crates/kagent-lens/src/: lib.rs
crates/kagent-sango/: Cargo.toml
crates/kagent-sango/src/: lib.rs
crates/kagent-sango/tests/: snapshot.rs
crates/kagent-sango/tests/fixtures/: snapshot.json
crates/kagent-ui/: Cargo.toml
crates/kagent-ui/src/: lib.rs
