[workspace]
members = [
    "crates/kagent-agent",
    "crates/kagent-cli",
    "crates/kagent-core",
    "crates/kagent-git",
    "crates/kagent-kitty",
    "crates/kagent-sango",
    "crates/kagent-ui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryugen04/kagent"
version = "0.1.0"
