[package]
name = "kagent-lens"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
kagent-core = { path = "../kagent-core" }
kagent-git = { path = "../kagent-git" }
kagent-kitty = { path = "../kagent-kitty" }
kagent-sango = { path = "../kagent-sango" }
kagent-ui = { path = "../kagent-ui" }
